remove  PermSize MaxPermSize elimination in JDK 8
remove -XX:PermSize=128m -XX:MaxPermSize=128m